Cleaned up code + fixed nav overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     letter-spacing: 0.1rem;
 }
 
+.avatar {
+    max-height: 100vh;
+    max-width: 100%;
+}
+
 .diploma {
     position: absolute;
     right: 5px;
@@ -37,6 +42,10 @@ body {
 
 .screen {
     max-width: 90%;
+}
+
+.no-wrap {
+    white-space: nowrap;
 }
 
 .bg-yellow {
@@ -77,6 +86,12 @@ body {
 .button-mail {
     background-color: #D97272;
     letter-spacing: normal;
+}
+
+@media (max-width: 369px) {
+    .link {
+        font-size: 0.6rem;
+    }
 }
 
 @media (max-width: 991.98px) {
